Fix mixer description only shows 'Playback Stream', Fix broken scrollbar padding

--- a/src/styles/notification-widget.scss
+++ b/src/styles/notification-widget.scss
@@ -24,7 +24,6 @@
 
     // Avoid Scrollbar
     .message-list-sections {
-        padding: 0px;
         margin: 0px;
     }
 
