--- a/src/styles/volume-mixer-widget.scss
+++ b/src/styles/volume-mixer-widget.scss
@@ -12,6 +12,9 @@
         spacing: 4px;
     }
     spacing: 6px;
+    #{$p}-has-scrollbar {
+        padding: 0px 5px 0px 0px;
+    }
 }
 .quick-toggle-menu-container {
     #{$p}-volume-mixer {
