--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -13,7 +13,3 @@
 .QSTWEAWKS-input-output-label {
     width: auto;
 }
-
-#{$p}-has-scrollbar {
-    padding: 0px 5px 0px 0px;
-}
